Fix GeoNode for GeoServer